@@ -2,6 +2,7 @@
 
 	* Add printf support for format string a, A, and F.
 	* Handle embedded NULs correctly in printf.
+	* Replace open-coded flushall in preadbuffer.
 
 2014-10-13  Eric Blake <eblake@redhat.com>
 
